--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
         <button class="navbar-buttons">Home</button>
         <button class="navbar-buttons">Library</button>
         <button class="navbar-buttons">Studio</button>
-        <button class="navbar-buttons">Projects</button>
+        <button class="navbar-buttons">Project</button>
 
       </div>
     </div>
