--- a/src/home.html
+++ b/src/home.html
@@ -17,7 +17,7 @@
     <div class="container-fluid">
       <div class="row justify-content-center bg-black" style="height: 100vh">
         <div
-          class="col-sm-8 bg-light rounded-1 p-4 my-2 d-flex flex-column"
+          class="col-lg-8 col-12 bg-light rounded-1 p-4 my-2 d-flex flex-column"
           style="height: 97vh"
         >
           <div class="d-flex">
@@ -32,7 +32,7 @@
               <span class="lead fs-1 fw-medium">Interlace</span>
             </div>
           </div>
-          <br />
+          <hr>
           <div class="d-flex flex-row justify-content-center">
             <div class="me-5">
               <button class="btn btn-dark">Home</button>
