--- a/src/home.html
+++ b/src/home.html
@@ -23,16 +23,16 @@
           <div class="d-flex">
             <img
               src="../images/SI Logo_2022-11-03_PNG.png"
-              class="img-fluid mt-2"
-              width="100px"
-              alt=""
+              class="img-fluid"
+              alt="logo"
+              style="width: 50px; height: 75px"
             />
             <div>
-              <span class="lead fs-1">Studio<br /></span>
-              <span class="lead fs-1 fw-medium">Interlace</span>
+              <span class="lead fs-5">STUDIO<br /></span>
+              <span class="lead fs-4 fw-medium">INTERLACE</span>
             </div>
           </div>
-          <hr>
+          <hr />
           <div class="d-flex flex-row justify-content-center">
             <div class="me-5">
               <button class="btn btn-dark">Home</button>
