--- a/src/home.html
+++ b/src/home.html
@@ -51,7 +51,7 @@
                 <li><a class="dropdown-item" href="#">Reference Library</a></li>
                 <li class="dropend">
                   <a
-                    class="btn btn-dark dropdown-toggle"
+                    class="dropdown-item dropdown-toggle"
                     type="button"
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
